fix(GUI): reader settings clipped text (PR #2456  Fixes #2454 )

--- a/src/renderer/assets/styles/components/settings.scss
+++ b/src/renderer/assets/styles/components/settings.scss
@@ -31,7 +31,7 @@ $setting_color: var(--color-blue);
         padding-bottom: 15px ;
         border-bottom: 2px solid var(--color-extralight-grey);
         margin: 10px 0 20px;
-        width: 100%;
+        width: calc(100% - 40px);
         display: flex;
         flex-direction: column;
         gap: 5px;
@@ -468,7 +468,7 @@ $setting_color: var(--color-blue);
         align-items: start;
         justify-content: flex-start;
         gap: 10px;
-        width: 320px;
+        width: fit-content;
         font-size: 14px;
         background-color: var(--color-extralight-grey);
         color: var(--color-primary);
